fixed up spacing

--- a/src/components/EnglishPage/EnglishPage.css
+++ b/src/components/EnglishPage/EnglishPage.css
@@ -3,9 +3,9 @@
   flex-direction: column;
   align-items: center;
 
-/* ------------------- */
-
-}.englishTitleClass {
+  /* ------------------- */
+}
+.englishTitleClass {
   font-size: 1rem;
   color: rgb(167, 165, 165);
   margin: 0;
@@ -19,13 +19,18 @@
 
 .englishPoemClass {
   font-weight: 400;
-  font-size: 1.3rem;
+  font-size: 25px;
   margin-left: 9.2px;
   margin-top: 10px;
   /* margin-bottom: 10px; */
   color: rgb(255, 255, 255);
-  /* max width */
-  /* media query when screen size is 420x420 don't let it get wider */
   max-width: 770px;
+  text-align: left;
+  /* line-height: 40px; */
 }
 
+.englishLineBreak {
+  display: block;
+  margin-bottom: 20px;
+  background-color: blue;
+}
