--- a/src/components/PoemPage/PoemPage.css
+++ b/src/components/PoemPage/PoemPage.css
@@ -33,10 +33,12 @@
 .chinesePoem {
   font-weight: 400;
   font-size: 1.87rem;
-  margin-left: 14.9px;
+  /* margin-left: 14.9px; */
   margin-top: 10px;
   color: rgb(255, 255, 255);
   cursor: pointer;
+  text-align: center;
+  /* background-color: red; */
 }
 
 @media screen and (min-width: 750px) {
